tests/good/simple22.tig
let
  var x := 2
in
  1/x
end